--- a/contacts.html
+++ b/contacts.html
@@ -14,13 +14,67 @@
     <link rel="stylesheet" href="./asssets/css/footer.css">
     <script src="./js/storage.js"></script>
     <script src="./js/contacts.js"></script>
+    <link rel="stylesheet" href="./asssets/css/web_header.css">
+    <script src="./js/header_include.js"></script>
     <!-- <script src="./js/script.js"></script> -->
     <script src="./js/footer.js"></script>
 </head>
 
 <body onload="loadContacts(); init()">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
-    <div class="width" w3-header-include-html="./asssets/templates/web_header.html"></div>
+    <!-- <div class="width" w3-header-include-html="./asssets/templates/web_header.html"></div> -->
+
+    <div onclick="closeBurgerMenu()" id="web-header" class="web-header">
+        <span>Kanban Project Mangement Tool</span>
+        <div class="img-container">
+            <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg"
+                alt="">
+            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/person.svg"
+                alt="">
+        </div>
+    </div>
+    <div onclick="closeBurgerMenu()" id="background-container">
+        <div class="burger-menu-outer-container">
+            <div id="burger-menu">
+                <a class="help" href="#">Help</a>
+                <a class="privacy" href="#">Leagal notice</a>
+                <a href="./index.html">Log out</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="nav-bar-container">
+        <div id="nav-bar" onclick="closeBurgerMenu()" class="logo-container">
+            <img class="logo-white" src="./asssets/img/Join_logo_white.svg" alt="">
+        </div>
+        <nav id="nav-bar" onclick="closeBurgerMenu()">
+            <div class="nav-link-container">
+                <div onclick="location.href='./summary.html'">
+                    <img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt="">
+                    <span id="nav-summary">Summary</span>
+                </div>
+                <div onclick="location.href='./board.html'">
+                    <img class="icon" src="./asssets/img/Board_icon.svg" alt="">
+                    <span>Board</span>
+                </div>
+                <div onclick="location.href='./add_task.html'">
+                    <img class="icon" src="./asssets/img/Add_Task_icon.svg" alt="">
+                    <span>Add Task</span>
+                </div>
+                <div onclick="location.href='./contacts.html'" style="background-color:#091931 ;">
+                    <img class="icon" src="./asssets/img/contacts_icon_white.svg" alt="">
+                    <span style="color: white;">Contacts</span>
+                </div>
+            </div>
+            <div onclick="location.href='./privacy_policy.html'" class="legal-container">
+                <img src="./asssets/img/info.svg" alt="">
+                <span>Legal notice</span>
+            </div>
+        </nav>
+        <div>
+        </div>
+    </div>
+
     <div class="desktop-page">
         <div class="new-contact-frame">
             <div class="new-contact-container-frame">
@@ -68,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-               
+
             </div>
         </div>
         <div id="content-big-contact" class="content-big-contact d-none">
@@ -107,7 +161,7 @@
                     </div>
                     <div class="email-data">
                         <span class="email-head">Email</span>
-                        <span id="email-adress${i}" class="email-adress-blue">antom@gmail.com</span> 
+                        <span id="email-adress${i}" class="email-adress-blue">antom@gmail.com</span>
                     </div>
                     <div class="mobile-data">
                         <span class="mobile-head">Mobil</span>
@@ -185,7 +239,7 @@
                 <span class="contact-logo-template gray">
                     <img class="big-head" src="./asssets/img/big-head.svg" alt="person head">
                 </span>
-                <form >
+                <form>
                     <div onclick="closeAddContactsOverlay()" class="close-x-dark-container">
                         <img class="close-x-dark" src="./asssets/img/close-x-dark.svg" alt="close x-icon">
                     </div>
@@ -220,20 +274,20 @@
     <footer>
         <div id="summary-div" class="icon-container summary">
             <a href="./summary.html"><img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt=""></a>
-             <a href="./summary.html"><span>Summary</span></a>
-         </div>
-         <div id="board-div" class="icon-container">
-             <a href="./board.html"><img class="icon" src="./asssets/img/Board_icon.svg" alt=""></a>
-             <a href="./board.html"><span>Board</span></a>
-         </div>
-         <div id="add-task-div" class="icon-container">
-             <a href="./add_task.html"><img class="add-task-icon" src="./asssets/img/Add_Task_icon.svg" alt=""></a>
-             <a href="./add_task.html"><span>Add Task</span></a>
-         </div>
-         <div id="contacts-div" class="icon-container" style="background-color: #091931; height: 87%;">
-             <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/contacts_icon_white.svg" alt=""></a>
-             <a href="./contacts.html"><span style="color: white">Contacts</span></a>
-         </div>
+            <a href="./summary.html"><span>Summary</span></a>
+        </div>
+        <div id="board-div" class="icon-container">
+            <a href="./board.html"><img class="icon" src="./asssets/img/Board_icon.svg" alt=""></a>
+            <a href="./board.html"><span>Board</span></a>
+        </div>
+        <div id="add-task-div" class="icon-container">
+            <a href="./add_task.html"><img class="add-task-icon" src="./asssets/img/Add_Task_icon.svg" alt=""></a>
+            <a href="./add_task.html"><span>Add Task</span></a>
+        </div>
+        <div id="contacts-div" class="icon-container" style="background-color: #091931; height: 87%;">
+            <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/contacts_icon_white.svg" alt=""></a>
+            <a href="./contacts.html"><span style="color: white">Contacts</span></a>
+        </div>
     </footer>
     <script src="./js/header_include.js"></script>
 </body>
