--- a/guest_hello.html
+++ b/guest_hello.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="./asssets/css/footer.css">
     <link rel="stylesheet" href="./asssets/css/guest_hello.css">
     <script src="./js/header_include.js"></script>
+    <script src="/js/register.js"></script>
+    <script src="/js/storage.js"></script>
 </head>
 <body onload="loadSummary()">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div  id="guest-hello" class="page show content">
         <h1>Good morning</h1>
+        <span id="user-name"></span>
     </div>
     <footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
 </body>
