--- a/summary.html
+++ b/summary.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="./asssets/css/footer.css">
     <script src="./js/summary.js"></script>
+    <link rel="stylesheet" href="asssets/css/web_header.css">
     <title>Summary</title>
 </head>
 
