add-task-div-closed

--- a/board.html
+++ b/board.html
@@ -343,6 +343,7 @@
                 <img src="./asssets/img/Prio-icon-arrow.svg" alt="">
             </div>
         </div>
+        </div>
 
         <!------------- Assigned to Section ------------>
 
