--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body id="body" onload="init()">
     <div class="first-page-logo-container">
-        <img src="/asssets/img/Logo_white.svg" alt="">
+        <!-- <img src="/asssets/img/Logo_white.svg" alt=""> -->
     </div>
     <script src="/js/script.js"></script>
     <script src="/js/storage.js"></script>
