--- a/add_task.html
+++ b/add_task.html
@@ -23,7 +23,7 @@
     <span>Kanban Project Mangement Tool</span>
     <div class="img-container">
       <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg" alt="">
-      <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/person.svg" alt="">
+      <img id="person-img" onclick="burgerMenu()" class="person" src="./asssets/img/person.svg" alt="">
     </div>
   </div>
   <div onclick="closeBurgerMenu()" id="background-container">
