--- a/add_task.html
+++ b/add_task.html
@@ -95,6 +95,9 @@
             </div>
             <img src="./asssets/img/open.svg" alt="" />
           </div>
+
+          <!-- Hinzufügen des neuen Elements für das ausgewählte Bild -->
+          <div id="selected-image"></div>
       
           <div id="dropdown" class="d-none">
             <div onclick="showNewCategoryFields()" id="selected-one" class="selected">
@@ -116,12 +119,12 @@
               <img src="./asssets/img/checkmark.svg" id="check-icon" onclick="saveNewCategory()">
             </div>
             <div id="new-category-colors">
-              <img class="hover-dot" src="./asssets/img/dark-blue-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot" src="./asssets/img/green-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot" src="./asssets/img/light-blue-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot" src="./asssets/img/orange-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot" src="./asssets/img/pink-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot" src="./asssets/img/red-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot"  src="./asssets/img/dark-blue-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot"  src="./asssets/img/green-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot"  src="./asssets/img/light-blue-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot"  src="./asssets/img/orange-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot"  src="./asssets/img/pink-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot"  src="./asssets/img/red-dot.svg" alt="" onclick="selectColor(event)">
             </div>
           </div>
           
