add greeting function

--- a/guest_hello.html
+++ b/guest_hello.html
@@ -12,6 +12,7 @@
     <script src="./js/header_include.js"></script>
     <script src="/js/register.js"></script>
     <script src="/js/storage.js"></script>
+    <script src="/js/login.js"></script>
 </head>
 <body onload="loadSummary()">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
