--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="/js/header_include.js"></script>
     <script src="/js/generatHTML.js"></script>
     <script src="/js/header_include.js"></script>
+    <script src="/js/summary.js"></script>
 
 
 </head>
