--- a/summary.html
+++ b/summary.html
@@ -19,7 +19,7 @@
     <title>Summary</title>
 </head>
 
-<body onload="init();loadtodos()" id="summary" class="page">
+<body onload="init();loadtodos();userGreetingOnSummary();" id="summary" class="page">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
     <!-- <div class="width" w3-header-include-html="./asssets/templates/web_header.html"></div> -->
 
@@ -117,7 +117,8 @@
                     </div>
                 </div>
 
-                <div class="welcome-title">Good morning,<br><b class="welcome-name">Sofia Müller</b></div>
+                <div class="welcome-title">
+                    <span id="greeting"></span><br><b id="name" class="welcome-name"></b></div>
             </div>
             <div class="count-done">
                 <div class="div-count1" onmouseover="changePenimage(this)" onmouseout="restorePenimage(this)">
