--- a/summary.html
+++ b/summary.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./asssets/css/header.css">
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="./asssets/css/footer.css">
+    <link rel="stylesheet" href="/asssets/css/web_header.css">
     <script src="./js/summary.js"></script>
     <script src="./js/board.js"></script>
     <title>Summary</title>
