--- a/board.html
+++ b/board.html
@@ -30,10 +30,10 @@
     <script src="./js/board.js"></script>
     <script src="./js/add_task_popup.js"></script>
     <script src="./js/storage.js"></script>
-    <script src="add_task.js"></script>
+    
     <title>Board</title>
 </head>
-<body onload="init(); updateHTML()">
+<body onload="init(); updateHTML(); loadNewtasks()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
     <div
       class="width"
