--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
 </head>
 
-<body id="body" onload="init()">
+<body onload="init()" id="body">
     <div class="first-page-logo-container">
-        <!-- <img src="/asssets/img/Logo_white.svg" alt=""> -->
     </div>
     <script src="/js/script.js"></script>
     <script src="/js/storage.js"></script>
