--- a/board.html
+++ b/board.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/asssets/css/footer.css">
     <link rel="stylesheet" href="asssets/css/add_task_popUp.css">
     <link rel="stylesheet" href="task-popUp.css">
+    <link rel="stylesheet" href="asssets/css/web_header.css">
     <script src="js/footer.js"></script>
     <script src="./js/board.js"></script>
     <script src="./js/add_task_popup.js"></script>
