--- a/board.html
+++ b/board.html
@@ -152,8 +152,8 @@
                 <div class="card-head">
                     <div class="head-title">In progress</div>
             <div
-              onmouseover="changePenimage(this)"
-              onmouseout="restorePenimage(this)"
+              onmouseover="changeimage(this)"
+              onmouseout="restoreimage(this)"
             >
               <img id="add-card" src="./asssets/img/add-card.svg" alt="" />
             </div>
@@ -187,8 +187,8 @@
                 <div class="card-head">
                     <div class="head-title">Awaiting Feedback</div>
             <div
-              onmouseover="changePenimage(this)"
-              onmouseout="restorePenimage(this)"
+              onmouseover="changeimage(this)"
+              onmouseout="restoreimage(this)"
             >
               <img id="add-card" src="./asssets/img/add-card.svg" alt="" />
                 </div>
@@ -221,8 +221,8 @@
                 <div class="card-head">
                     <div class="head-title">Done</div>
             <div
-              onmouseover="changePenimage(this)"
-              onmouseout="restorePenimage(this)"
+              onmouseover="changeimage(this)"
+              onmouseout="restoreimage(this)"
             >
               <img id="add-card" src="./asssets/img/add-card.svg" alt="" />
             </div>
