--- a/add_task.html
+++ b/add_task.html
@@ -18,7 +18,7 @@
   <script src="./js/contacts.js"></script>
 </head>
 
-<body onload="init(); loadContacts()">
+<body onload="init(); loadContactsForAssign()">
   <!-- <div class="width" w3-header-include-html="./asssets/templates/web_header.html"></div> -->
 
   <div onclick="closeBurgerMenu()" id="web-header" class="web-header">
