--- a/board.html
+++ b/board.html
@@ -25,7 +25,7 @@
     
     <title>Board</title>
 </head>
-<body onload="init(); updateHTML(); loadContactsForAssign()">
+<body onload="init(); updateHTML(); loadContactsForAssign(); loadNewtasks()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
     <!-- <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div> -->
     <div class="nav-bar-container">
