--- a/add_task.html
+++ b/add_task.html
@@ -119,12 +119,12 @@
               <img src="./asssets/img/checkmark.svg" id="check-icon" onclick="saveNewCategory()">
             </div>
             <div id="new-category-colors">
-              <img class="hover-dot"  src="./asssets/img/dark-blue-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot"  src="./asssets/img/green-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot"  src="./asssets/img/light-blue-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot"  src="./asssets/img/orange-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot"  src="./asssets/img/pink-dot.svg" alt="" onclick="selectColor(event)">
-              <img class="hover-dot"  src="./asssets/img/red-dot.svg" alt="" onclick="selectColor(event)">
+              <img class="hover-dot" src="./asssets/img/dark-blue-dot.svg" data-color="#0000FF" onclick="selectColor(event)">
+              <img class="hover-dot" src="./asssets/img/green-dot.svg" data-color="#00FF00" onclick="selectColor(event)">
+              <img class="hover-dot" src="./asssets/img/light-blue-dot.svg" data-color="#ADD8E6" onclick="selectColor(event)">
+              <img class="hover-dot" src="./asssets/img/orange-dot.svg" data-color="#FFA500" onclick="selectColor(event)">
+              <img class="hover-dot" src="./asssets/img/pink-dot.svg" data-color="#FFC0CB" onclick="selectColor(event)">
+              <img class="hover-dot" src="./asssets/img/red-dot.svg" data-color="#FF0000" onclick="selectColor(event)">
             </div>
           </div>
           
