--- a/add_task.html
+++ b/add_task.html
@@ -104,10 +104,12 @@
               <span>New Category</span>
             </div>
             <div onclick="selectOption(event, '#00FF00')" id="selected-two" class="selected">
-              <span>Sales</span><div class="circle green"></div>
+              <span>Sales</span>
+              <div class="circle green"></div>
             </div>
             <div onclick="selectOption(event, '#2A3647')" id="selected-three" class="selected">
-              <span>Backoffice</span><div class="circle dark-blue"></div>
+              <span>Backoffice</span>
+              <div class="circle dark-blue"></div>
             </div>
           </div>
       
