add-task-to contacts

--- a/board.html
+++ b/board.html
@@ -278,7 +278,7 @@
                             <span class="dark-blue">+3</span>
                         </div>
 
-                <img src="./asssets/img/toDo icon.svg" alt="" />
+                <img src="./asssets/img/toDo-icon.svg" alt="" />
                     </div>
                 </div>
                 </div>
