--- a/board.html
+++ b/board.html
@@ -27,6 +27,7 @@
     <title>Board</title>
 </head>
 <body onload="init(); loadNewtasksboard(); loadContactsForAssign()">
+  <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div onclick="closeBurgerMenu()" id="web-header" class="web-header">
       <span>Kanban Project Mangement Tool</span>
       <div class="img-container">
