--- a/summary.html
+++ b/summary.html
@@ -23,7 +23,7 @@
 </head>
 
 <body onload="init();userGreetingOnSummary(); loadNewtasksboardd()" id="summary" class="page">
-
+    <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div onclick="closeBurgerMenu()" id="web-header" class="web-header">
         <span>Kanban Project Mangement Tool</span>
         <div class="img-container">
