--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
 </head>
 
 <body onload="init()" id="body">
-    <header>
-        <div class="logo-white-container">
-            <img src="./asssets/img/Join_logo_white.svg" alt="" style="padding-top:37px">
-        </div>
+
         <div class="logo-container">
-            <img src="/asssets/img/mobile-login-logo-dark.svg" alt="" style="padding-top:37px">
+            <img class="white-logo" src="./asssets/img/Join_logo_white.svg" alt="" style="padding-top:37px">
+            <img class="dark-logo" src="/asssets/img/mobile-login-logo-dark.svg" alt="" style="padding-top:37px">
         </div>
-    </header>
+    <!-- </header> -->
     <div class="main-content">
         <div id="inside-window" class="inside-window">
             <h1>Log in</h1>
