--- a/summary.html
+++ b/summary.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="separation-line"></div>
                     <div>
-                        <div class="summary-date">October 16, 2023</div>
+                        <div id="summary-date" class="summary-date">October 16, 2023</div>
                         <div>Upcoming Deadline</div>
                     </div>
                 </div>
