--- a/contacts.html
+++ b/contacts.html
@@ -171,7 +171,7 @@
                     <div class="input-field">
                         <textarea class="phone-displayed" name="name" id="phone-displayed" cols="50"
                             rows="10">+49 2222 222 22 2</textarea>
-                        <input class="tel-input d-none" type="tel" placeholder="Phone">
+                        <input class="tel-input d-none" type="number" placeholder="Phone">
                         <img src="./asssets/img/tel.svg" alt="name icon">
                     </div>
                     <div class="delete-save">
