--- a/contacts.html
+++ b/contacts.html
@@ -217,7 +217,7 @@
                             <img src="./asssets/img/email-icon.svg" alt="email icon">
                         </div>
                         <div id="input-field" class="input-field">
-                            <input required id="tel-input" class="tel-input" type="number" placeholder="Phone">
+                            <input required id="tel-input" class="tel-input" type="text" pattern="[0-9\s]*" placeholder="Phone">
                             <img src="./asssets/img/tel.svg" alt="name icon">
                         </div>
                         <div class="buttons">
